--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.4.4",
-    "@tailwindcss/vite": "^4.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.4.3",
+    "framer-motion": "^12.23.12",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
     "lucide-react": "^0.475.0",
+    "react-router-dom": "^7.8.0",
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.0.6",
     "three": "^0.173.0",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0",
@@ -32,20 +34,26 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/locomotive-scroll": "^4.1.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-slick": "^0.23.13",
     "@types/three": "^0.173.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vitest": "^3.2.4"
   }
 }
